// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render a InputLabel with custom labelFor passed as a prop  1`] = `
Object {
  "component": <div>
    <label
      className=""
      htmlFor="ID12345"
    />
  </div>,
  "styles": "",
}
`;

exports[`should correctly render a InputLabel with custom text passed as a prop  1`] = `
Object {
  "component": <div>
    <label
      className=""
    >
      <span>
        this is a test text passed through a prop
      </span>
    </label>
  </div>,
  "styles": "",
}
`;

exports[`should correctly render a InputLabel without any props or styles 1`] = `
Object {
  "component": <div>
    <label
      className=""
    />
  </div>,
  "styles": "",
}
`;

exports[`should render a Input Label with styles and text matching styleObject and text props 1`] = `
Object {
  "component": <div>
    <label
      className="htz-a htz-b htz-c"
    >
      <span>
        a text prop
      </span>
    </label>
  </div>,
  "styles": ".htz-a{font-size:4rem}.htz-b{color:blue}.htz-c{background-color:red}",
}
`;
